--- a/.github/workflows/blog-pipeline.yml
+++ b/.github/workflows/blog-pipeline.yml
@@ -8,19 +8,33 @@ on:
 
 env:
   DOTNET_VERSION: '8.0.x'
-  PROJECT_NAME: 'SimpleBlog.API'
-  PROJECT_PATH: 'src/SimpleBlog.API'
-  TEST_PATH: 'tests/SimpleBlog.API.Tests'
+  SOLUTION_FILE: 'SimpleBlogAPI.sln'
 
 jobs:
-  # Джоба 1: Сборка и проверка кода
-  build:
-    name: 🔨 Сборка проекта
-    runs-on: ubuntu-latest
+  # Джоба 1: Проверка и сборка
+  build-and-test:
+    name: 🔨 Сборка и тестирование
+    runs-on: windows-latest  # Используем Windows runner
 
     steps:
     - name: 📥 Загружаем код
       uses: actions/checkout@v4
+
+    - name: 📁 Показываем структуру (для отладки)
+      shell: pwsh
+      run: |
+        Write-Host "📁 Текущая директория: $(Get-Location)" -ForegroundColor Cyan
+        Write-Host "📁 Содержимое:" -ForegroundColor Cyan
+        Get-ChildItem -Force
+        Write-Host ""
+        Write-Host "📁 Содержимое src/:" -ForegroundColor Cyan
+        Get-ChildItem -Path src -Force -ErrorAction SilentlyContinue
+        Write-Host ""
+        Write-Host "📁 Файлы проекта:" -ForegroundColor Cyan
+        Get-ChildItem -Recurse -Filter *.csproj | ForEach-Object { Write-Host "  - $($_.FullName)" }
+        Write-Host ""
+        Write-Host "📁 Файлы решения:" -ForegroundColor Cyan
+        Get-ChildItem -Filter *.sln
 
     - name: ⚙️ Устанавливаем .NET
       uses: actions/setup-dotnet@v3
@@ -28,144 +42,173 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: 📦 Восстанавливаем зависимости
-      run: dotnet restore
+      shell: pwsh
+      run: |
+        Write-Host "📦 Восстанавливаем зависимости..." -ForegroundColor Green
+        
+        # Проверяем наличие solution файла
+        if (Test-Path ${{ env.SOLUTION_FILE }}) {
+          Write-Host "✅ Найден solution файл: ${{ env.SOLUTION_FILE }}" -ForegroundColor Green
+          dotnet restore ${{ env.SOLUTION_FILE }}
+        } else {
+          Write-Host "⚠️ Solution файл не найден, ищем .csproj файлы" -ForegroundColor Yellow
+          
+          # Ищем все csproj файлы
+          $projFiles = Get-ChildItem -Recurse -Filter *.csproj
+          if ($projFiles.Count -gt 0) {
+            Write-Host "✅ Найдены проекты:" -ForegroundColor Green
+            $projFiles | ForEach-Object { Write-Host "  - $($_.Name)" }
+            
+            # Восстанавливаем каждый проект
+            foreach ($proj in $projFiles) {
+              Write-Host "📦 Восстанавливаем $($proj.Name)..." -ForegroundColor Cyan
+              dotnet restore $proj.FullName
+            }
+          } else {
+            Write-Host "❌ Файлы проекта не найдены!" -ForegroundColor Red
+            exit 1
+          }
+        }
 
     - name: 🔨 Собираем проект
-      run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release --no-restore
+      shell: pwsh
+      run: |
+        Write-Host "🔨 Собираем проект..." -ForegroundColor Green
+        
+        if (Test-Path ${{ env.SOLUTION_FILE }}) {
+          Write-Host "🔨 Сборка solution..." -ForegroundColor Cyan
+          dotnet build ${{ env.SOLUTION_FILE }} --configuration Release --no-restore
+        } else {
+          Write-Host "🔨 Сборка всех проектов..." -ForegroundColor Cyan
+          dotnet build --configuration Release --no-restore
+        }
+        
+        Write-Host "✅ Сборка завершена!" -ForegroundColor Green
+        
+        # Показываем результаты сборки
+        Write-Host ""
+        Write-Host "📁 Результаты сборки:" -ForegroundColor Cyan
+        Get-ChildItem -Recurse -Path "bin\Release" -Filter *.dll -ErrorAction SilentlyContinue | 
+          Select-Object -First 10 Name, Directory |
+          ForEach-Object { Write-Host "  - $($_.Name) в $($_.Directory)" }
 
-    - name: 🧹 Проверяем стиль кода
-      run: dotnet format ${{ env.PROJECT_PATH }} --verify-no-changes || echo "Форматирование проверено"
+    - name: 🧪 Запускаем тесты
+      shell: pwsh
+      run: |
+        Write-Host "🧪 Запускаем тесты..." -ForegroundColor Green
+        
+        # Создаем папку для результатов тестов
+        New-Item -ItemType Directory -Force -Path TestResults | Out-Null
+        
+        # Ищем тестовые проекты
+        $testProjects = Get-ChildItem -Recurse -Filter *.csproj | 
+                        Where-Object { $_.Name -match "Test" -or $_.Directory.Name -match "Test" }
+        
+        if ($testProjects.Count -gt 0) {
+          Write-Host "✅ Найдены тестовые проекты:" -ForegroundColor Green
+          $testProjects | ForEach-Object { Write-Host "  - $($_.Name)" }
+          
+          foreach ($testProj in $testProjects) {
+            Write-Host ""
+            Write-Host "🧪 Тестируем $($testProj.Name)..." -ForegroundColor Cyan
+            
+            # Unit тесты
+            Write-Host "  🔹 Unit тесты..." -ForegroundColor Gray
+            dotnet test $testProj.FullName --verbosity normal `
+              --logger "trx;LogFileName=$($testProj.BaseName)-unit.trx" `
+              --results-directory TestResults `
+              --no-restore
+            
+            # Интеграционные тесты (если есть)
+            Write-Host "  🔗 Интеграционные тесты..." -ForegroundColor Gray
+            dotnet test $testProj.FullName --verbosity normal `
+              --filter "Category=Integration" `
+              --logger "trx;LogFileName=$($testProj.BaseName)-integration.trx" `
+              --results-directory TestResults `
+              --no-restore
+          }
+        } else {
+          Write-Host "⚠️ Тестовые проекты не найдены" -ForegroundColor Yellow
+          # Создаем заглушку для отчета
+          "<TestRun></TestRun>" | Out-File -FilePath "TestResults/no-tests.trx"
+        }
+        
+        Write-Host "✅ Тестирование завершено!" -ForegroundColor Green
 
-    - name: 💾 Сохраняем собранное приложение
+    - name: 📊 Сохраняем артефакты
+      shell: pwsh
+      run: |
+        Write-Host "📊 Сохраняем артефакты..." -ForegroundColor Green
+        
+        # Создаем временную папку для артефактов
+        New-Item -ItemType Directory -Force -Path artifacts | Out-Null
+        
+        # 1. Копируем сборку
+        $buildDirs = Get-ChildItem -Recurse -Directory -Path "bin\Release\net8.0" -ErrorAction SilentlyContinue
+        if ($buildDirs.Count -gt 0) {
+          Write-Host "📦 Копируем сборку..." -ForegroundColor Cyan
+          foreach ($dir in $buildDirs) {
+            $destDir = "artifacts\build\$($dir.Parent.Parent.Parent.Name)"
+            New-Item -ItemType Directory -Force -Path $destDir | Out-Null
+            Copy-Item -Path "$($dir.FullName)\*" -Destination $destDir -Recurse -Force
+            Write-Host "  ✅ Скопировано из $($dir.FullName)" -ForegroundColor Gray
+          }
+        }
+        
+        # 2. Копируем результаты тестов
+        if (Test-Path TestResults) {
+          Write-Host "📋 Копируем результаты тестов..." -ForegroundColor Cyan
+          Copy-Item -Path TestResults\* -Destination artifacts\test-results -Recurse -Force
+        }
+        
+        # 3. Показываем что получилось
+        Write-Host ""
+        Write-Host "📁 Содержимое artifacts:" -ForegroundColor Cyan
+        Get-ChildItem -Path artifacts -Recurse | ForEach-Object {
+          $indent = "  " * ($_.FullName.Split('\').Length - $PWD.Path.Split('\').Length - 1)
+          Write-Host "$indent📄 $($_.Name)" -ForegroundColor Gray
+        }
+
+    - name: 📤 Загружаем артефакты в GitHub
       uses: actions/upload-artifact@v4
       with:
-        name: blog-api-build
-        path: ${{ env.PROJECT_PATH }}/bin/Release/net8.0/
+        name: blog-api-artifacts
+        path: artifacts/
         retention-days: 7
 
-  # Джоба 2: Запуск тестов
-  test:
-    name: 🧪 Запуск тестов
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: 📥 Загружаем код
-      uses: actions/checkout@v4
-
-    - name: ⚙️ Устанавливаем .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-
-    - name: 🧪 Запускаем unit-тесты
-      run: dotnet test ${{ env.TEST_PATH }} --verbosity normal --logger "trx;LogFileName=unit-tests.trx"
-
-    - name: 🔗 Запускаем интеграционные тесты
-      run: dotnet test ${{ env.TEST_PATH }} --verbosity normal --logger "trx;LogFileName=integration-tests.trx"
-
-    - name: 📊 Сохраняем результаты тестов
-      uses: actions/upload-artifact@v4
-      with:
-        name: test-results
-        path: |
-          ${{ env.TEST_PATH }}/TestResults/*.trx
-        retention-days: 30
-
-  # Джоба 3: Создание Docker образа
-  docker-build:
-    name: 🐳 Сборка Docker образа
-    needs: test
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: 📥 Загружаем код
-      uses: actions/checkout@v4
-
-    - name: 🐳 Собираем Docker образ
-      run: |
-        docker build -t simple-blog-api:${{ github.sha }} .
-        docker images
-
-    - name: 📁 Сохраняем Dockerfile и конфиги
-      uses: actions/upload-artifact@v4
-      with:
-        name: docker-configs
-        path: |
-          Dockerfile
-          **/appsettings.json
-        retention-days: 7
-
-  # Джоба 4: Публикация приложения
-  publish:
-    name: 🚀 Публикация приложения
-    needs: [build, test, docker-build]
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: 📥 Загружаем код
-      uses: actions/checkout@v4
-
-    - name: ⚙️ Устанавливаем .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
-
-    - name: 📦 Публикуем приложение
-      run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o ./publish --self-contained false
-
-    - name: 📝 Создаем файл с информацией о сборке
-      run: |
-        echo "Build Information" > ./publish/build-info.txt
-        echo "========================" >> ./publish/build-info.txt
-        echo "Version: 1.0.0" >> ./publish/build-info.txt
-        echo "Commit: ${{ github.sha }}" >> ./publish/build-info.txt
-        echo "Branch: ${{ github.ref }}" >> ./publish/build-info.txt
-        echo "Built: $(date)" >> ./publish/build-info.txt
-        echo "Author: ${{ github.actor }}" >> ./publish/build-info.txt
-
-    - name: 📦 Архивируем приложение
-      run: |
-        zip -r simple-blog-api-v1.0.0.zip ./publish/*
-        echo "Размер архива:"
-        ls -lh simple-blog-api-v1.0.0.zip
-
-    - name: 💾 Сохраняем релизный пакет
-      uses: actions/upload-artifact@v4
-      with:
-        name: release-package
-        path: simple-blog-api-v1.0.0.zip
-        retention-days: 30
-
-  # Джоба 5: Финальный отчет
+  # Джоба 2: Отчет
   report:
     name: 📊 Итоговый отчет
-    needs: [build, test, docker-build, publish]
-    runs-on: ubuntu-latest
+    needs: build-and-test
+    runs-on: windows-latest
+    if: always()
 
     steps:
     - name: 📝 Генерируем отчет
+      shell: pwsh
       run: |
-        echo "================================================================"
-        echo "BLOG API ПАЙПЛАН ЗАВЕРШЕН! ✅"
-        echo "================================================================"
-        echo ""
-        echo "РЕЗУЛЬТАТЫ ВЫПОЛНЕНИЯ:"
-        echo "✅ Сборка проекта - УСПЕШНО"
-        echo "✅ Запуск тестов - УСПЕШНО"
-        echo "✅ Сборка Docker образа - УСПЕШНО"
-        echo "✅ Публикация приложения - УСПЕШНО"
-        echo ""
-        echo "📦 СОЗДАННЫЕ АРТЕФАКТЫ:"
-        echo "• blog-api-build - Собранное приложение"
-        echo "• test-results - Результаты тестирования"
-        echo "• docker-configs - Docker конфигурации"
-        echo "• release-package - Релизный пакет"
-        echo ""
-        echo "📊 ИНФОРМАЦИЯ О ПРОЕКТЕ:"
-        echo "• Название: ${{ env.PROJECT_NAME }}"
-        echo "• .NET Version: ${{ env.DOTNET_VERSION }}"
-        echo "• Ветка: ${{ github.ref }}"
-        echo ""
-        echo "🕐 Время завершения: $(date)"
-        echo "---"
+        Write-Host "================================================================" -ForegroundColor Cyan
+        Write-Host "              BLOG API ПАЙПЛАН ЗАВЕРШЕН! 🎉" -ForegroundColor Green
+        Write-Host "================================================================" -ForegroundColor Cyan
+        Write-Host ""
+        Write-Host "📊 РЕЗУЛЬТАТЫ ВЫПОЛНЕНИЯ:" -ForegroundColor Yellow
+        Write-Host "  ✅ Сборка проекта - ${{ needs.build-and-test.result }}" -ForegroundColor $(if ('${{ needs.build-and-test.result }}' -eq 'success') { 'Green' } else { 'Red' })
+        Write-Host ""
+        Write-Host "🔧 ИНФОРМАЦИЯ:" -ForegroundColor Yellow
+        Write-Host "  • Ветка: ${{ github.ref }}" -ForegroundColor Gray
+        Write-Host "  • Коммит: ${{ github.sha }}" -ForegroundColor Gray
+        Write-Host "  • Инициатор: ${{ github.actor }}" -ForegroundColor Gray
+        Write-Host "  • Система: Windows" -ForegroundColor Gray
+        Write-Host ""
+        Write-Host "🕐 Время завершения: $(Get-Date -Format 'yyyy-MM-dd HH:mm:ss')" -ForegroundColor Gray
+        Write-Host ""
+        
+        if ('${{ needs.build-and-test.result }}' -eq 'success') {
+          Write-Host "🎉 ВСЕ ЭТАПЫ ВЫПОЛНЕНЫ УСПЕШНО!" -ForegroundColor Green
+          Write-Host "📦 Артефакты доступны для скачивания" -ForegroundColor Cyan
+        } else {
+          Write-Host "❌ ВЫПОЛНЕНИЕ ЗАВЕРШИЛОСЬ С ОШИБКОЙ" -ForegroundColor Red
+          Write-Host "⚠️ Проверьте логи выполнения" -ForegroundColor Yellow
+        }
+        
+        Write-Host "================================================================" -ForegroundColor Cyan
